Fix show tracklist for ajax loaded items, fox z-index for gototop

--- a/trunk/templates/default/style.css
+++ b/trunk/templates/default/style.css
@@ -254,7 +254,7 @@ audio { width: 330px; transform: scale(0.8); }
 #file-table tr:last-child td { border-bottom: none; }
 
 #gototop { display: none; position: fixed; left: 5px; top: 40%; width: 50px; height: 50px;
-    background: url('../../assets/images/icon-up-48x48.png') no-repeat center center; }
+    background: url('../../assets/images/icon-up-48x48.png') no-repeat center center; z-index: 10000; }
 
 #sitemap { padding: 0 15px; }
 #sitemap .open-spoiler { text-transform: lowercase; }
